--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -1,9 +1,9 @@
 
-img {
-  margin-bottom: 50px;
+.image {
+  margin-bottom: 75px;
   width: 100%;
   max-height: 220px;
-  overflow: cover;
+
 }
 
 .name{
@@ -29,7 +29,6 @@ img {
   justify-content: flex-end;
   align-content: flex-end;
   max-width: 250px;
-  /* min-height: 400px; */
   max-height: 580px;
   margin: 0 auto;
   margin-top: 20vh;
