--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -29,6 +29,7 @@
   justify-content: flex-end;
   align-content: flex-end;
   max-width: 250px;
+  min-height: 480px;
   max-height: 580px;
   margin: 0 auto;
   margin-top: 20vh;
