--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -1,14 +1,55 @@
-.pagination{
-  list-style-type: none;
+
+
+.pagination {
   display: flex;
-  align-content: flex-end;
-  position: relative;
-  margin: 0 auto;
-  margin-top: 1rem;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
 }
-.numbers{
-  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.2);
-  margin: 1px;
-  text-decoration: none;
-  padding: 10px
+
+.paginationItem {
+  background: #fff;
+  border: 2px solid #666;
+  padding: 10px 15px;
+  border-radius: 50%;
+  height: 45px;
+  width: 45px;
+  position: relative;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+.paginationItem span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.prev,
+.next {
+  background: #fff;
+  border: none;
+  padding: 10px;
+  color: blue;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.4);
+  margin: 0 10px;
+  cursor: pointer;
+}
+
+.paginationItem.active {
+  border: 1px solid #888;
+  color: #888;
+  pointer-events: none;
+}
+
+.prev.disabled,
+.next.disabled {
+  pointer-events: none;
+  box-shadow: none;
+  color: #999;
+}
+
+.dataContainer {
+  display: flex;
 }
