Currently fixing styling issues but Pagination component works on the page

--- a/src/components/Store/Store.css
+++ b/src/components/Store/Store.css
@@ -1,8 +1,7 @@
 .items{
   display: flex;
   flex-flow:row wrap;
-  flex-basis: 33%;
-  max-width: 1480px;
-  padding: 20px;
-  margin: 0 auto;
+  justify-content: center;
+  align-content: center;
+  padding: 5px;
 }
