--- a/src/components/Categories Page/Categories.css
+++ b/src/components/Categories Page/Categories.css
@@ -7,3 +7,16 @@
   padding: 20px;
   margin: 0 auto;
 }
+
+@media screen and (max-width: 375px) {
+  .card-container{
+    display: flex;
+    justify-content: center;
+  }  
+  .catIntro{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin: 0 auto;
+    max-width: 50%;
+  }
+}
