--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,4 +1,7 @@
 .nav-links{
   display: flex;
   justify-content: space-between;
+    font-size: 20px;
+    color: black;
+    text-decoration: none;
 }
