--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -1,10 +1,9 @@
-
-
 .pagination {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-top: 10px;
+  margin-bottom: 25px;
 }
 
 .paginationItem {
@@ -52,4 +51,9 @@
 
 .dataContainer {
   display: flex;
+  flex-flow:row wrap;
+  flex-basis: 33%;
+  max-width: 1480px;
+  padding: 20px;
+  margin: 0 auto;
 }
