Fixed Pagination issues

--- a/src/components/Store/Store.css
+++ b/src/components/Store/Store.css
@@ -1,7 +1,6 @@
 .items{
   display: flex;
   flex-flow:row wrap;
-  justify-content: center;
-  align-content: center;
+  max-width: 1480px;
   padding: 5px;
 }
