styled for mobile/ Still have to fix mobile menu

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     font-size: 20px;
-    color: white;
+    color: black;
     text-decoration: none;
   }
 
