--- a/src/components/Navbar/PhoneNav.css
+++ b/src/components/Navbar/PhoneNav.css
@@ -25,7 +25,9 @@
     z-index: 50;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
     display: flex;
-    display: block;
+    justify-content: space-evenly;
+    align-content: center;
+    flex-flow: column wrap;
   }
   .emptySide {
     background-color: rgba(0,0,0,0.5);
@@ -33,9 +35,7 @@
     top: 0;
     left: 0;
     width: 100vw;
-    height: 1000vh;
+    height: 100vh;
     z-index: 50;
   }
 }
-
-/* rgba(0,0,0,0.5) */
