--- a/src/components/Navbar/PhoneNav.css
+++ b/src/components/Navbar/PhoneNav.css
@@ -17,7 +17,7 @@
   }
   .menuDetails {
     position: fixed;
-    background-color: white;
+    background-color: #232F3E;
     top: 0;
     left: 0;
     width: 80%;
